[gd_scene load_steps=13 format=3 uid="uid://dhj2nor3m0lap"]

[ext_resource type="Script" uid="uid://uhttkb8fsb0y" path="res://professor_planetario.gd" id="1_23odp"]
[ext_resource type="Texture2D" uid="uid://8optj1cj8m4o" path="res://assets/character/homem_camisa_branca_cabelo_castanho.png" id="2_33wqu"]
[ext_resource type="Texture2D" uid="uid://y2du2fpbb5f1" path="res://assets/sprites/balao.png" id="3_xqfxf"]
[ext_resource type="Theme" uid="uid://b8ndtnuwykcur" path="res://themes/theme_01.tres" id="4_nr53s"]
[ext_resource type="PackedScene" uid="uid://d7denlk6pmkn" path="res://dialog/dialogue_area.tscn" id="5_8xdhy"]
[ext_resource type="PackedScene" uid="uid://toyub3necoa1" path="res://dialog/dialogue_line.tscn" id="6_qf821"]
[ext_resource type="Texture2D" uid="uid://dn5ji02a0a1dx" path="res://assets/character/retrato_player.png" id="7_kuypi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0thdg"]
radius = 6.08276

[sub_resource type="AtlasTexture" id="AtlasTexture_7abjj"]
atlas = ExtResource("2_33wqu")
region = Rect2(48, 0, 48, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifwf5"]
atlas = ExtResource("2_33wqu")
region = Rect2(144, 0, 48, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_mckcn"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_7abjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifwf5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7fjwp"]
radius = 37.0135

[node name="ProfessorPlanetario" type="Area2D" groups=["dialogue_area"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_23odp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_0thdg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_mckcn")
animation = &"idle"

[node name="InteractPrompt" type="Node2D" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="InteractPrompt"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -53.0
offset_right = 34.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="InteractPrompt/CenterContainer"]
custom_minimum_size = Vector2(68, 20)
layout_mode = 2
texture = ExtResource("3_xqfxf")
expand_mode = 1

[node name="Label" type="Label" parent="InteractPrompt/CenterContainer"]
custom_minimum_size = Vector2(2, 22)
layout_mode = 2
theme = ExtResource("4_nr53s")
theme_override_font_sizes/font_size = 16
text = " Dialog (E)"
horizontal_alignment = 1

[node name="dialogo1" parent="." instance=ExtResource("5_8xdhy")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="dialogo1"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_7fjwp")
debug_color = Color(1, 1, 1, 0.42)

[node name="dialogue_line" parent="dialogo1" instance=ExtResource("6_qf821")]
char_name = "Player"
text = "Olá. Sou o Player, queria conhecer esse lugar."
translation = "____. I'm Player, I wanted to know this place."
word_options = Array[String](["Hello", "Goodbye", "Bombardino"])
correct_word = "Hello"
picture = ExtResource("7_kuypi")
is_minigame = true

[node name="dialogue_line" parent="dialogo1/dialogue_line" instance=ExtResource("6_qf821")]
char_name = "Professor"
text = "Come closer, Gaudério. I'll tell you everything about the stars!"
translation = "Te aprochega gaudério. Vou te contar tudo sobre as estrelas!"

[connection signal="body_entered" from="dialogo1" to="." method="_on_dialogo_1_body_entered"]
[connection signal="body_exited" from="dialogo1" to="." method="_on_dialogo_1_body_exited"]
